Filled out more content. Updated code errors.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/potatosalad.html">Patate Prezzemolate</a>
+    <a href="recipes/italianpastasalad.html">Italian Pasta Salad</a>
+
+
 </body>
 </html>
