--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/potatosalad.html">Patate Prezzemolate</a>
-    <a href="recipes/italianpastasalad.html">Italian Pasta Salad</a>
+    <ul>
+    <li><a href="recipes/potatosalad.html">Patate Prezzemolate</a></li>
+    <li><a href="recipes/italianpastasalad.html">Italian Pasta Salad</a></li>
+    <li><a href="recipes/heartyvegetarianlasagna">Hearty Vegtarian Lasagna</a></li> 
 
 
 </body>
