--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
     <li><a href="recipes/potatosalad.html">Patate Prezzemolate</a></li>
     <li><a href="recipes/italianpastasalad.html">Italian Pasta Salad</a></li>
-    <li><a href="recipes/heartyvegetarianlasagna">Hearty Vegtarian Lasagna</a></li> 
+    <li><a href="recipes/heartyvegetarianlasagna.html">Hearty Vegtarian Lasagna</a></li> 
 
 
 </body>
