--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+                          <h1>Odin Recipes</h1>
     <ul>
     <li><a href="recipes/potatosalad.html">Patate Prezzemolate</a></li>
     <li><a href="recipes/italianpastasalad.html">Italian Pasta Salad</a></li>
-    <li><a href="recipes/heartyvegetarianlasagna.html">Hearty Vegtarian Lasagna</a></li> 
-
-
+    <li><a href="recipes/heartyvegetablelasagna.html">Hearty Vegetarian Lasagna</a></li> 
 </body>
 </html>
