--- a/recipes/italianpastasalad.html
+++ b/recipes/italianpastasalad.html
@@ -14,23 +14,23 @@
 
     <h2>Ingredients</h2>
     <ul>
-        <l>1 (16 ounce) package fusilli (spiral) pasta</l>
-        <l>3 cups cherry tomatoes, halved</l>
-        <l>½ pound provolone cheese, cubed</l>
-        <l>½ pound salami, cubed</l>
-        <l>¼ pound sliced pepperoni, cut in half</l>
-        <l>1 large green bell pepper, cut into 1 inch pieces</l>
-        <l>1 (10 ounce) can black olives, drained</l>
-        <l>1 (4 ounce) jar pimentos, drained</l>
-        <l>1 (8 ounce) bottle Italian salad dressing</l>
+        <li>1 (16 ounce) package fusilli (spiral) pasta</li>
+        <li>3 cups cherry tomatoes, halved</li>
+        <li>½ pound provolone cheese, cubed</li>
+        <li>½ pound salami, cubed</li>
+        <li>¼ pound sliced pepperoni, cut in half</li>
+        <li>1 large green bell pepper, cut into 1 inch pieces</li>
+        <li>1 (10 ounce) can black olives, drained</li>
+        <li>1 (4 ounce) jar pimentos, drained</li>
+        <li>1 (8 ounce) bottle Italian salad dressing</li>
     </ul>
     
     <h2>Steps</h2>
     <ol>
-        <l>Gather all ingredients.</l>
-        <l>Bring a large pot of lightly salted water to a boil. Cook fusilli pasta in the boiling water, stirring occasionally, until tender yet firm to the bite, about 12 minutes. Drain.</l>
-        <l>Combine pasta with tomatoes, cheese, salami, pepperoni, green pepper, olives, and pimentos in a large bowl. Pour in salad dressing; toss to coat.</l>
-        <l>Enjoy!
+        <li>Gather all ingredients.</li>
+        <li>Bring a large pot of lightly salted water to a boil. Cook fusilli pasta in the boiling water, stirring occasionally, until tender yet firm to the bite, about 12 minutes. Drain.</li>
+        <li>Combine pasta with tomatoes, cheese, salami, pepperoni, green pepper, olives, and pimentos in a large bowl. Pour in salad dressing; toss to coat.</li>
+        <li>Enjoy!</li>
    </ol>
 </body>
 </html>
